--- a/index.html
+++ b/index.html
@@ -1,10 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Page</title>
+    <title>Simple Form Page</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
+            font-family: sans-serif;
+            background: #f8f9fa;
+        }
+        .header {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            padding: 16px 0 0 16px;
+            box-sizing: border-box;
+        }
+        .logo {
+            height: 48px;
+            width: auto;
+        }
+        .center-content {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .form-container {
+            background: #fff;
+            padding: 32px 24px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            min-width: 320px;
+        }
+        h1 {
+            text-align: center;
+        }
+        form label {
+            display: block;
+            margin-top: 16px;
+            margin-bottom: 4px;
+        }
+        form input {
+            width: 100%;
+            padding: 6px 8px;
+            margin-bottom: 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+        form button {
+            width: 100%;
+            padding: 10px 0;
+            margin-top: 16px;
+            border: none;
+            border-radius: 4px;
+            background: #007bff;
+            color: #fff;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+        form button:hover {
+            background: #0056b3;
+        }
+    </style>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent form from submitting normally
+
+            // Get form data
+            const firstName = document.getElementById('firstName').value;
+            const lastName = document.getElementById('lastName').value;
+            const dob = document.getElementById('dob').value;
+
+            // Call a placeholder function for the external API
+            callExternalAPI({ firstName, lastName, dob });
+        }
+
+        function callExternalAPI(formData) {
+            // Placeholder for external API call
+            // You can replace this with the actual API request logic later
+            console.log('Submitting to external API:', formData);
+
+            // Example of how you might send data using fetch:
+            /*
+            fetch('https://your-api-endpoint.com/api', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(formData)
+            })
+            .then(response => response.json())
+            .then(data => {
+                // Handle API response here
+            })
+            .catch(error => {
+                // Handle errors here
+            });
+            */
+        }
+    </script>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is my first webpage hosted on GitHub.</p>
+    <div class="header">
+        <!-- Replace 'logo.png' with your logo file name or image URL -->
+        <img src="logo.png" alt="Logo" class="logo">
+    </div>
+    <div class="center-content">
+        <div class="form-container">
+            <h1>Enter Your Details</h1>
+            <form id="userForm" onsubmit="handleSubmit(event)">
+                <label for="firstName">First Name:</label>
+                <input type="text" id="firstName" name="firstName" required>
+
+                <label for="lastName">Last Name:</label>
+                <input type="text" id="lastName" name="lastName" required>
+
+                <label for="dob">Date of Birth:</label>
+                <input type="date" id="dob" name="dob" required>
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
