--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div class="header">
         <!-- Replace 'logo.png' with your logo file name or image URL -->
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="UBS_Logo.png" alt="Logo" class="logo">
     </div>
     <div class="center-content">
         <div class="form-container">
